--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,13 @@ name: CI for FastAPI on Windows
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
     branches: [main]
 
 jobs:
   test:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
