--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install fastapi uvicorn pytest flake8
+          pip install fastapi uvicorn pytest flake8 asgi_lifespan
 
       - name: Run tests with pytest
         run: |
