--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 annotated-types==0.7.0
 anyio==4.9.0
 asgi-lifespan==2.1.0
+aiosql
 asyncpg==0.30.0
 click==8.2.1
 colorama==0.4.6
 fastapi==0.115.12
 flake8==7.2.0
 h11==0.16.0
+httpx
 idna==3.10
 iniconfig==2.1.0
 mccabe==0.7.0
@@ -17,6 +19,7 @@ pydantic==1.10.13
 pydantic_core==2.33.2
 pyflakes==3.3.2
 pytest==8.3.5
+pypika
 sniffio==1.3.1
 starlette==0.46.2
 typing-inspection==0.4.1
